; ModuleID = '/home/carl/AnghaBench/vlc/src/video_output/extr_vout_subpictures.c_spu_SetClockDelay.c'
source_filename = "/home/carl/AnghaBench/vlc/src/video_output/extr_vout_subpictures.c_spu_SetClockDelay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 }
%struct.spu_channel = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @spu_SetClockDelay(%struct.TYPE_5__* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_6__*, align 8
  %8 = alloca %struct.spu_channel*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  store %struct.TYPE_6__* %11, %struct.TYPE_6__** %7, align 8
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = call i32 @vlc_mutex_lock(i32* %13)
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %16 = load i64, i64* %5, align 8
  %17 = call %struct.spu_channel* @spu_GetChannel(%struct.TYPE_5__* %15, i64 %16)
  store %struct.spu_channel* %17, %struct.spu_channel** %8, align 8
  %18 = load %struct.spu_channel*, %struct.spu_channel** %8, align 8
  %19 = getelementptr inbounds %struct.spu_channel, %struct.spu_channel* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @assert(i32 %20)
  %22 = load %struct.spu_channel*, %struct.spu_channel** %8, align 8
  %23 = getelementptr inbounds %struct.spu_channel, %struct.spu_channel* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @vlc_clock_SetDelay(i32 %24, i32 %25)
  %27 = load i32, i32* %6, align 4
  %28 = load %struct.spu_channel*, %struct.spu_channel** %8, align 8
  %29 = getelementptr inbounds %struct.spu_channel, %struct.spu_channel* %28, i32 0, i32 0
  store i32 %27, i32* %29, align 4
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %31 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %30, i32 0, i32 0
  %32 = call i32 @vlc_mutex_unlock(i32* %31)
  ret void
}

declare dso_local i32 @vlc_mutex_lock(i32*) #1

declare dso_local %struct.spu_channel* @spu_GetChannel(%struct.TYPE_5__*, i64) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @vlc_clock_SetDelay(i32, i32) #1

declare dso_local i32 @vlc_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
